--- a/find.html
+++ b/find.html
@@ -21,13 +21,19 @@
 			<div class="swiper-container banner">
 			    <ul class="swiper-wrapper">
 			        <li class="swiper-slide">
-			        	<a href="javascript:;"><img src="img/lunbo1.jpg"/></a>
+			        	<a href="javascript:;"><img src="img/zhuanti_img_1.jpg"/></a>
 			        </li>
 			        <li class="swiper-slide">
-			        	<a href="javascript:;"><img src="img/lunbo2.jpg"/></a>
+			        	<a href="javascript:;"><img src="img/zhuanti_img_2.jpg"/></a>
 			        </li>
 			        <li class="swiper-slide">
-			        	<a href="javascript:;"><img src="img/lunbo3.jpg"/></a>
+			        	<a href="javascript:;"><img src="img/zhuanti_img_3.jpg"/></a>
+			        </li>
+			        <li class="swiper-slide">
+			        	<a href="javascript:;"><img src="img/zhuanti_img_4.jpg"/></a>
+			        </li>
+			        <li class="swiper-slide">
+			        	<a href="javascript:;"><img src="img/zhuanti_img_5.jpg"/></a>
 			        </li>
 			    </ul>
 			    <div class="swiper-pagination"></div>
