--- a/share.html
+++ b/share.html
@@ -15,11 +15,11 @@
 		<div class="share">
 			<div class="share-title">分享</div>
 			<ul class="list">
-				<li><a href="list.html"><span class="iconfont" style="background:#57C9A5">&#xe618;</span>微信</a></li>
-				<li><a href=""><span class="iconfont" style="background:#FCDB47">&#xe645;</span>朋友圈</a></li>
-				<li><a href=""><span class="iconfont" style="background:#5CB7EC">&#xe61b;</span>微博</a></li>
-				<li><a href=""><span class="iconfont" style="background:#F46D73">&#xe669;</span>QQ空间</a></li>
-				<li><a href=""><span class="iconfont" style="background:#F46D73">&#xe606;</span>QQ</a></li>
+				<li><span class="iconfont" style="background:#57C9A5">&#xe618;</span>微信</li>
+				<li><span class="iconfont" style="background:#FCDB47">&#xe645;</span>朋友圈</li>
+				<li><span class="iconfont" style="background:#5CB7EC">&#xe61b;</span>微博</li>
+				<li><span class="iconfont" style="background:#F46D73">&#xe669;</span>QQ空间</li>
+				<li><span class="iconfont" style="background:#F46D73">&#xe606;</span>QQ</li>
 			</ul>
 			<a href="show.html" class="cancle">取消</a>
 		</div>
