--- a/mine.html
+++ b/mine.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-	</body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title></title>
+    <link rel="stylesheet" href="css/iconfont.css" />
+    <link rel="stylesheet" href="css/mine.css" />
+    <script src="js/zepto.min.js"></script>
+    <script src="js/size.js"></script>
+    <script src="js/iscroll.js"></script>
+    <script src="js/fm.js"></script>
+</head>
+<body>
+	<div id="wrapper">
+		<div id="scroller">
+			<div class="mine-bg"></div>
+			<div class="mine-title">
+				<div class="mine-img"></div>
+				<span>青城Cutie</span>
+			</div>
+			<ul class="mine-con">
+				<li><a href="javascript:;"><span class="iconfont">&#xe603;</span>我关注的</a></li>
+				<li><a href="javascript:;"><span class="iconfont">&#xe623;</span>我的收藏</a></li>
+				<li><a href="javascript:;"><span class="iconfont">&#xe6b7;</span>我的下载</a></li>
+				<li><a href="javascript:;"><span class="iconfont">&#xe621;</span>我的话题</a></li>
+			</ul>
+		</div>
+	</div>
+	<footer>
+		<a href="index.html"><span class="iconfont">&#xe732;</span><br />首页</a>
+		<a href="find.html"><span class="iconfont">&#xe615;</span><br />发现</a>
+		<a href="shequ.html"><span class="iconfont">&#xe614;</span><br />社区</a>
+		<a href="mine.html" class="active"><span class="iconfont">&#xe680;</span><br />我的</a>
+		<a href="set.html"><span class="iconfont">&#xe644;</span><br />设置</a>
+	</footer>
+</body>
 </html>
