--- a/index1.html
+++ b/index1.html
@@ -148,7 +148,7 @@
 		</div>
 	</div>
 	<footer>
-		<a href="index.html" class="active"><span class="iconfont">&#xe732;</span><br />首页</a>
+		<a href="index1.html" class="active"><span class="iconfont">&#xe732;</span><br />首页</a>
 		<a href="find.html"><span class="iconfont">&#xe615;</span><br />发现</a>
 		<a href="shequ.html"><span class="iconfont">&#xe614;</span><br />社区</a>
 		<a href="mine.html"><span class="iconfont">&#xe680;</span><br />我的</a>
