--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
 </head>
 	<body>
 		<header>
-			<a href="index.html" class="iconfont">&#xe610;</a>
+			<a href="index1.html" class="iconfont">&#xe610;</a>
 			<span>自我成长</span>
 		</header>
 		<div class="shadow"></div>
