--- a/mine1.html
+++ b/mine1.html
@@ -10,6 +10,20 @@
     <script src="js/size.js"></script>
     <script src="js/iscroll.js"></script>
     <script src="js/fm.js"></script>
+    <style>
+    	.mine-img{
+    		width: 3rem ;height:3rem;position: absolute;top:-1rem;left:0;right:0;margin:auto;
+    	}
+    	.tologin{
+    		text-align: center;
+    	}
+    	.tologin a{
+    		display: block;width:5.5rem;height:0.8rem;background:#EEAE7E;color:#fff;text-align: center;line-height: 0.9rem;font-size:0.3rem;margin:0.7rem auto;border-radius: 0.2rem;margin-bottom:0.3rem;
+    	}
+    	.tologin p{
+    		font-size:0.3rem;
+    	}
+    </style>
 </head>
 <body>
 	<div id="wrapper">
@@ -17,22 +31,11 @@
 			<div class="mine-bg"></div>
 			<div class="mine-title">
 				<div class="mine-img"></div>
-				<span>青城Cutie</span>
 			</div>
-			<ul class="mine-con">
-				<li><a href="javascript:;"><span class="iconfont">&#xe603;</span>我关注的</a></li>
-				<li><a href="javascript:;"><span class="iconfont">&#xe623;</span>我的收藏</a></li>
-				<li><a href="javascript:;"><span class="iconfont">&#xe6b7;</span>我的下载</a></li>
-				<li><a href="javascript:;"><span class="iconfont">&#xe621;</span>我的话题</a></li>
-			</ul>
-			<ul class="mine-con">
-				<li><a href="javascript:;"><span class="iconfont">&#xe77f;</span>通知</a></li>
-				<li><a href="javascript:;"><span class="iconfont">&#xe60f;</span>私信</a></li>
-			</ul>
-			<ul class="mine-con">
-				<li><a href="javascript:;"><span class="iconfont">&#xe61f;</span>我的礼物</a></li>
-				<li><a href="javascript:;"><span class="iconfont">&#xe604;</span>我的金币<span class="jinbi">50个</span></a></li>
-			</ul>
+			<div class="tologin">
+				<a href="login.html">登录</a>
+				<p>登录后可收藏、下载节目、与主播私信等！</p>
+			</div>
 		</div>
 	</div>
 	<footer>
