--- a/comShow.html
+++ b/comShow.html
@@ -15,7 +15,7 @@
 	<div class="shequ-title">
 		<a href="shequ.html" class="iconfont">&#xe610;</a>
 		<span class="part">详情</span>
-		<span class="iconfont">|</span>
+		<span class="iconfont"></span>
 	</div>
 	<div class="shadow"></div>
 	<div id="wrapper">
