--- a/comment.html
+++ b/comment.html
@@ -26,7 +26,7 @@
 							<div class="right">
 								<div>苏呆子</div>
 								<div>加油噢，努力创造身前的路</div>
-								<div><span>13小时前</span> <span><i class="iconfont">zan</i> <i class="iconfont">&#xe613;</i></span></div>
+								<div><span>13小时前</span> <span><i class="iconfont">&#xe630;</i> <i class="iconfont">&#xe613;</i></span></div>
 							</div>
 						</a>
 					</li>
@@ -36,7 +36,7 @@
 							<div class="right">
 								<div>苏呆子</div>
 								<div>加油噢，努力创造身前的路</div>
-								<div><span>13小时前</span> <span><i class="iconfont">zan</i> <i class="iconfont">&#xe613;</i></span></div>
+								<div><span>13小时前</span> <span><i class="iconfont">&#xe630;</i> <i class="iconfont">&#xe613;</i></span></div>
 							</div>
 						</a>
 					</li>
@@ -46,7 +46,7 @@
 							<div class="right">
 								<div>苏呆子</div>
 								<div>加油噢，努力创造身前的路</div>
-								<div><span>13小时前</span> <span><i class="iconfont">zan</i> <i class="iconfont">&#xe613;</i></span></div>
+								<div><span>13小时前</span> <span><i class="iconfont">&#xe630;</i> <i class="iconfont">&#xe613;</i></span></div>
 							</div>
 						</a>
 					</li>
@@ -56,7 +56,7 @@
 							<div class="right">
 								<div>苏呆子</div>
 								<div>加油噢，努力创造身前的路</div>
-								<div><span>13小时前</span> <span><i class="iconfont">zan</i> <i class="iconfont">&#xe613;</i></span></div>
+								<div><span>13小时前</span> <span><i class="iconfont">&#xe630;</i> <i class="iconfont">&#xe613;</i></span></div>
 							</div>
 						</a>
 					</li>
