--- a/find.html
+++ b/find.html
@@ -90,10 +90,10 @@
 		</div>
 	</div>
 	<footer>
-		<a href="index.html"><span class="iconfont">&#xe732;</span><br />首页</a>
+		<a href="index1.html"><span class="iconfont">&#xe732;</span><br />首页</a>
 		<a href="find.html" class="active"><span class="iconfont">&#xe615;</span><br />发现</a>
 		<a href="shequ.html"><span class="iconfont">&#xe614;</span><br />社区</a>
-		<a href="mine.html"><span class="iconfont">&#xe680;</span><br />我的</a>
+		<a href="mine1.html"><span class="iconfont">&#xe680;</span><br />我的</a>
 		<a href="set.html"><span class="iconfont">&#xe644;</span><br />设置</a>
 	</footer>
 </body>
