--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 	<div class="login">
 		<ul class="login-con">
 			<li><span class="iconfont">&#xe60f;</span><input type="text" value="输入邮箱或手机号码"/></li>
-			<li><span class="iconfont">&#xe613;</span><input type="text" value="输入密码"/></li>
+			<li><span class="iconfont">&#xe65e;</span><input type="text" value="输入密码"/></li>
 		</ul>
 		<a href="mine.html"><input type="submit" value="登录" class="submit"/></a>
 		<div class="notice"><a href="reg.html">快速注册</a><a href="javascript:;">忘记密码？</a></div>
