--- a/publish.html
+++ b/publish.html
@@ -21,7 +21,7 @@
 		<ul class="publish-con">
 			<li><input type="text" value="标题（30字以内）"/></li>
 			<li><input type="text" value="此时此刻你想说的是..."/></li>
-			<li class="iconfont">vg</li>
+			<li class="iconfont">&#xe62a;</li>
 		</ul>
 		
 	</div>
