--- a/reg.html
+++ b/reg.html
@@ -19,7 +19,7 @@
 	<div class="login">
 		<ul class="login-con">
 			<li><span class="iconfont">&#xe60f;</span><input type="text" value="输入邮箱或手机号码"/></li>
-			<li><span class="iconfont">&#xe613;</span><input type="text" value="输入密码"/></li>
+			<li><span class="iconfont">&#xe65e;</span><input type="text" value="输入密码"/></li>
 		</ul>
 		<input type="submit" value="注册" class="submit"/>
 		
