--- a/set.html
+++ b/set.html
@@ -26,11 +26,11 @@
 				</li>
 			</ul>
 			<ul class="mine-con">
-				<li><a href="javascript:;"><span class="iconfont">&#xe647;</span>定时关闭<span class="iconfont">&#xe757;</span></a><span class="iconfont"></span></li>
+				<li><a href="javascript:;"><span class="iconfont">&#xe647;</span>定时关闭<span class="iconfont">&#xe62b;</span></a><span class="iconfont"></span></li>
 			</ul>
 			<ul class="mine-con">
-				<li><a href="javascript:;"><span class="iconfont">&#xe606;</span>绑定QQ账号<span class="iconfont">&#xe757;</span></a></li>
-				<li><a href="javascript:;"><span class="iconfont">&#xe61b;</span>绑定新浪微博<span class="iconfont">&#xe757;</span></a></li>
+				<li><a href="javascript:;"><span class="iconfont">&#xe606;</span>绑定QQ账号<span class="iconfont">&#xe62e;</span></a></li>
+				<li><a href="javascript:;"><span class="iconfont">&#xe61b;</span>绑定新浪微博<span class="iconfont">&#xe62e;</span></a></li>
 			</ul>
 			<ul class="mine-con">
 				<li><a href="javascript:;"><span class="iconfont">&#xe61f;</span>应用精选<span class="iconfont">&#xe757;</span></a></li>
